--- a/SicrediTimeline/app/src/main/res/layout/check_in_bottom_sheet_view.xml
+++ b/SicrediTimeline/app/src/main/res/layout/check_in_bottom_sheet_view.xml
@@ -5,21 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <View
+        android:id="@+id/view_slide_up"
+        android:layout_width="match_parent"
+        android:layout_height="24dp"
+        android:background="@drawable/background_swipe_up"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_checkin"
+        android:id="@+id/tv_check_in"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="14dp"
+        android:background="@color/color_secondary_dark"
         android:ellipsize="end"
+        android:paddingVertical="12dp"
         android:text="@string/txt_check_in"
         android:textAlignment="center"
-        android:textColor="@color/color_primary"
+        android:textColor="@color/color_light"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/view_slide_up" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_name"
@@ -32,19 +41,19 @@
         android:textColorHint="@color/color_gray_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_checkin">
+        app:layout_constraintTop_toBottomOf="@id/tv_check_in">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txt_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:nextFocusDown="@id/til_lastname"
-            android:textColor="@color/color_primary" />
+            android:nextFocusDown="@id/txt_email"
+            android:textColor="@color/color_gray_dark" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_lastname"
+        android:id="@+id/til_email"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -60,8 +69,8 @@
             android:id="@+id/txt_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_primary"
-            android:inputType="textEmailAddress"/>
+            android:inputType="textEmailAddress"
+            android:textColor="@color/color_gray_dark" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -70,11 +79,11 @@
         android:layout_width="0dp"
         android:layout_height="52dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/btn_rounded"
+        android:background="@drawable/button_rounded_primary"
         android:text="@string/txt_confirm"
         app:layout_constraintCircleRadius="20dp"
-        app:layout_constraintEnd_toEndOf="@id/til_lastname"
-        app:layout_constraintStart_toStartOf="@id/til_lastname"
-        app:layout_constraintTop_toBottomOf="@id/til_lastname" />
+        app:layout_constraintEnd_toEndOf="@id/til_email"
+        app:layout_constraintStart_toStartOf="@id/til_email"
+        app:layout_constraintTop_toBottomOf="@id/til_email" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
