--- a/SicrediTimeline/app/src/main/res/layout/events_activity.xml
+++ b/SicrediTimeline/app/src/main/res/layout/events_activity.xml
@@ -17,6 +17,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <include
+        android:id="@+id/view_loading"
+        layout="@layout/view_loading"
+        android:visibility="gone" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_post_list"
         android:layout_width="match_parent"
