--- a/SicrediTimeline/app/src/main/res/layout/view_check_in_bottom_sheet.xml
+++ b/SicrediTimeline/app/src/main/res/layout/view_check_in_bottom_sheet.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -47,7 +46,7 @@
             android:id="@+id/txt_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:nextFocusDown="@id/txt_email"
+            android:nextClusterForward="@id/til_email"
             android:textColor="@color/color_gray_dark" />
 
     </com.google.android.material.textfield.TextInputLayout>
