--- a/SicrediTimeline/app/src/main/res/layout/event_detail_activity.xml
+++ b/SicrediTimeline/app/src/main/res/layout/event_detail_activity.xml
@@ -31,7 +31,9 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar_event_detail">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/content_detail"
             android:layout_width="match_parent"
+            android:visibility="gone"
             android:layout_height="0dp"
             android:paddingBottom="32dp">
 
@@ -61,18 +63,66 @@
                 app:layout_constraintTop_toBottomOf="@id/iv_post_image"
                 tools:text="Titulo" />
 
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/iv_clock"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="14dp"
+                android:src="@drawable/ic_calendar"
+                app:layout_constraintStart_toStartOf="@id/tv_title"
+                app:layout_constraintTop_toBottomOf="@+id/tv_title" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_date"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:ellipsize="end"
+                android:maxLines="4"
+                android:textColor="@color/color_gray_dark"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/iv_clock"
+                app:layout_constraintTop_toTopOf="@+id/iv_clock"
+                app:layout_constraintBottom_toBottomOf="@+id/iv_clock"
+                tools:text="8 de Novembro 18:30" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/iv_ticket"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_ticket"
+                app:layout_constraintStart_toStartOf="@id/iv_clock"
+                app:layout_constraintTop_toBottomOf="@+id/iv_clock" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_price"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:ellipsize="end"
+                android:maxLines="4"
+                android:textColor="@color/color_gray_dark"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/iv_ticket"
+                app:layout_constraintTop_toTopOf="@+id/iv_ticket"
+                app:layout_constraintBottom_toBottomOf="@+id/iv_ticket"
+                tools:text="R$ 59,90" />
+
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tv_subtitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="14dp"
                 android:ellipsize="end"
                 android:textColor="@color/color_gray_dark"
                 android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="@id/tv_title"
-                app:layout_constraintStart_toStartOf="@id/tv_title"
-                app:layout_constraintTop_toBottomOf="@+id/tv_title"
+                app:layout_constraintEnd_toEndOf="@id/tv_price"
+                app:layout_constraintStart_toStartOf="@id/iv_ticket"
+                app:layout_constraintTop_toBottomOf="@+id/tv_price"
                 tools:text="Subtitulo" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -80,8 +130,10 @@
     </androidx.core.widget.NestedScrollView>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/bottom_sheet_check_in"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/bs_check_in"
@@ -102,5 +154,26 @@
         </androidx.cardview.widget.CardView>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <include
+        android:id="@+id/view_loading_detail"
+        layout="@layout/view_loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_event_detail" />
+
+    <include
+        android:id="@+id/view_network_error_detail"
+        layout="@layout/view_network_error"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_event_detail" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
