--- a/SicrediTimeline/app/src/main/res/layout/event_item.xml
+++ b/SicrediTimeline/app/src/main/res/layout/event_item.xml
@@ -20,11 +20,11 @@
             android:layout_width="match_parent"
             android:layout_height="180dp"
             android:adjustViewBounds="false"
+            android:background="#fbfbfb"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="#fbfbfb"
             tools:src="@drawable/ic_place_holder" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -41,6 +41,30 @@
             app:layout_constraintTop_toBottomOf="@id/iv_post_image"
             tools:text="Titulo" />
 
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/iv_clock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:src="@drawable/ic_calendar"
+            app:layout_constraintStart_toStartOf="@id/tv_title"
+            app:layout_constraintTop_toBottomOf="@+id/tv_title" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_date"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:ellipsize="end"
+            android:maxLines="4"
+            android:textColor="@color/color_gray_dark"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@id/tv_title"
+            app:layout_constraintStart_toEndOf="@id/iv_clock"
+            app:layout_constraintTop_toBottomOf="@+id/tv_title"
+            tools:text="8 de Novembro 18:30" />
+
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_subtitle"
             android:layout_width="0dp"
@@ -53,8 +77,8 @@
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/tv_title"
-            app:layout_constraintStart_toStartOf="@id/tv_title"
-            app:layout_constraintTop_toBottomOf="@+id/tv_title"
+            app:layout_constraintStart_toStartOf="@id/iv_clock"
+            app:layout_constraintTop_toBottomOf="@+id/tv_date"
             tools:text="Subtitulo" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
