--- a/SicrediTimeline/app/src/main/res/layout/events_activity.xml
+++ b/SicrediTimeline/app/src/main/res/layout/events_activity.xml
@@ -22,6 +22,11 @@
         layout="@layout/view_loading"
         android:visibility="gone" />
 
+    <include
+        android:id="@+id/view_network_error_events"
+        layout="@layout/view_network_error"
+        android:visibility="gone" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_post_list"
         android:layout_width="match_parent"
