--- a/EventsAppSample/app/src/main/res/layout/event_detail_activity.xml
+++ b/EventsAppSample/app/src/main/res/layout/event_detail_activity.xml
@@ -68,7 +68,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="14dp"
-                android:src="@drawable/ic_calendar"
+                app:srcCompat="@drawable/ic_calendar"
                 app:layout_constraintStart_toStartOf="@id/tv_title"
                 app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
@@ -92,7 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/ic_ticket"
+                app:srcCompat="@drawable/ic_ticket"
                 app:layout_constraintStart_toStartOf="@id/iv_clock"
                 app:layout_constraintTop_toBottomOf="@+id/iv_clock" />
 
